# knowledge-neuron-sim

./: LICENSE  README.md  evaluate_attribution_scores.py  experiment.sh  group_neurons.py  pyproject.toml  requirements.txt  wasserstein_distance.py
data/: generated_data_1token.json
knowledge_neurons/: __init__.py  knowledge_neurons.py  patch.py
scripts/: evaluate_pythia_410m.sh  group_neurons.sh  setup.sh  wasserstein_distance.sh
utils/: data.py  kn_stability.py
